v3.xx 2015/xx/xx
~~~~~~~~~~~~~~~~
New: Exercise SSLE.C53, a 2x2 system from The Economist
New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
Edit: Examples CROB4, CROB3, had old-style inner products (Chris Thron)
Typo: Example NSS, sentence needs "which" to join clauses (Chili Johnson)
Typo: Example LLDS, set is R, not B (Daniel York)
Typo: Solution LDS.C52, set is T, not S (Molly Hazlehurst)

v3.40 2014/12/12
~~~~~~~~~~~~~~~~
Typo: Example LIP4, sign on  2\alpha_{3}x^2  term, twice (Albert Schueller)
Typo: Exercise ILT.C30, degree should be dimension (Deborah DeHovitz)
Typo: Exercise PD.T05, added in trivial hypothesis (Jason Preszler)
Change: Theorem CMVEI, proof incorrect about r < m (Mike Taper)

v3.30 2014/08/27
~~~~~~~~~~~~~~~~
New: Exercise OD.T30, proof for product of upper triangular matrices
Edit: Clarified part of Solution LISS.C25 (Riley Carpenter)
Edit: Grammar - many contractions and hyphens surveyed, possibly adjusted
Edit: Clarification in Proof Technique D (Voornaam "Marc" Achternaam)
Typo: Theorem SMS, Definition SYM, not SM (Nathan Laviste)
Typo: Five minor mistakes in Section FS (Sam Coates)
Typo: Example MCSM, "pivoot" (Trenten Tollen)
Typo: LaTeX/XML formatting, Solution TSS.T11 now in a knowl (Adam Frank)
Typo: Chapter SLE, seven typos (Adam Frank)
Typo: Section WILA, "studies" to "studied" (Balachandran S)
Typo: Example ISSI, reference should be Exercise TSS.C10 (MSK)
Typo: Sage ANC, "scalr", and nearby, corrected (Arnold Lebow)
Typo: Example NSR, replace original matrix by the correct one (Wes Garrett)
Change: Reworded Exercise NM.T12 so statement is true (Adam Frank)

v3.20 2013/12/28
~~~~~~~~~~~~~~~~
New: Exercise ILT.T10, solution added
New: Section CNO, Theorems ZPCN, ZPZT about zero divisors
New: Exercise DM.M30, row-equivalence and Theorem PEEF (suggested by Todd Pytel)
Change: Bijection defined, never used (Anna Dovzhik)