@@ -4,6 +4,7 @@ New: Exercise SSLE.C53, a 2x2 system from The Economist
 New: Exercise O.T31, Gram-Schmidt twice (suggested by Chili Johnson)
 Edit: Consistent titles on Sage nonsingular matrix series (Daniel York)
 Edit: Examples CROB4, CROB3, had old-style inner products (Chris Thron)
+Edit: Streamline half of proof of Theorem NPNT
 Typo: Example NSS, sentence needs "which" to join clauses (Chili Johnson)
 Typo: Example LLDS, set is R, not B (Daniel York)
 Typo: Solution LDS.C52, set is T, not S (Molly Hazlehurst)
